feat: 🎸 修正發票開立 租戶錯誤

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/PageLayout/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/PageLayout/en.json
@@ -6,10 +6,10 @@
     "TenantWallet:Remark": "Remark",
     "TenantWallet:EnterAmount": "Enter Amount",
     "TenantWallet:RechargeAmount": "Recharge Amount",
-    "TenantWallet:RechargeAmountOfStored": "Recharge Amount Of Stored",
+    "TenantWallet:RechargeAmountOfStored": "Recharge Amount",
     "TenantWallet:InputRechargeReminder": "Please enter a multiple of {0}",
     "TenantWallet:DeductionAmount": "Deduction Amount",
-    "TenantWallet:DeductionAmountOfStored": "Deduction Amount Of Stored",
+    "TenantWallet:DeductionAmountOfStored": "Deduction Amount",
     "TenantWallet:InputDeductionReminder": "Please enter the amount to be deducted",
     "TenantWallet:ConfirmRecharge": "Recharge",
     "TenantWallet:ConfirmDeduction": "Deduction",
