#PK-1304 Modification of Item Badge

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -1480,6 +1480,7 @@
     "InstallmentPeriods.6": "6期",
     "InstallmentPeriods.12": "12期",
     "InstallmentPeriods.18": "18期",
-    "InstallmentPeriods.24": "24期"
+    "InstallmentPeriods.24": "24期",
+    "EnterANewBadge": "輸入新徽章"
   }
 }
