--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1397,6 +1397,7 @@
     "InstallmentPeriods.6": "6",
     "InstallmentPeriods.12": "12",
     "InstallmentPeriods.18": "18",
-    "InstallmentPeriods.24": "24"
+    "InstallmentPeriods.24": "24",
+    "EnterANewBadge": "Enter a new badge"
   }
 }
