#PK-1312 Add Custom Text Module for group buy

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1398,6 +1398,7 @@
     "InstallmentPeriods.12": "12",
     "InstallmentPeriods.18": "18",
     "InstallmentPeriods.24": "24",
-    "EnterANewBadge": "Enter a new badge"
+    "EnterANewBadge": "Enter a new badge",
+    "CustomTextModule": "Custom Text Module"
   }
 }
