--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -1108,6 +1108,7 @@
     "InstallmentPeriods.12": "12期",
     "InstallmentPeriods.18": "18期",
     "InstallmentPeriods.24": "24期",
-    "EnterANewBadge": "輸入新徽章"
+    "EnterANewBadge": "輸入新徽章",
+    "CustomTextModule": "文字內容模組"
   }
 }
