--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -1109,6 +1109,13 @@
     "InstallmentPeriods.18": "18期",
     "InstallmentPeriods.24": "24期",
     "EnterANewBadge": "輸入新徽章",
-    "CustomTextModule": "文字內容模組"
+    "CustomTextModule": "文字內容模組",
+    "AreYouSureToDeleteThisMessage": "確定要刪除此訊息嗎？",
+    "StoreComments": "商店備註",
+    "StoreCommentsHistory": "商店備註歷史",
+    "CustomerService": "客服訊息",
+    "TypeMessage": "輸入訊息",
+    "Send": "發送",
+    "NoMessages": "尚無訊息"
   }
 }
