feat: 🎸 Alter_Table_AppElectronicInvoiceSettings

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/PageLayout/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/PageLayout/en.json
@@ -1,6 +1,11 @@
 {
   "culture": "en",
   "texts": {
+    "Order:InvoiceType": "Invoice Type",
+
+    "InvoiceType:GeneralTaxAmount": "General Tax Amount",
+    "InvoiceType:SpecialTaxAmount": "Special Tax Amount",
+
     "TenantWallet:Amount": "Amount",
     "TenantWallet:Balance": "Balance",
     "TenantWallet:Remark": "Remark",
