#PK-1319 Partnership module

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1401,6 +1401,7 @@
     "NoMessages": "No messages",
     "EnterText": "Please enter text",
     "Text": "Content",
-    "SelectModule": "Select Module"
+    "SelectModule": "Select Module",
+    "PartnershipModule": "Partnership Module"
   }
 }
