--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -1119,6 +1119,7 @@
     "NoMessages": "尚無訊息",
     "EnterText": "請輸入文字內容",
     "Text": "內容",
-    "SelectModule": "選擇模組"
+    "SelectModule": "選擇模組",
+    "PartnershipModule": "合作廠商模組"
   }
 }
