#PK-1336 Make carousel image style required to select

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1402,6 +1402,7 @@
     "EnterText": "Please enter text",
     "Text": "Content",
     "SelectModule": "Select Module",
-    "PartnershipModule": "Partnership Module"
+    "PartnershipModule": "Partnership Module",
+    "CarouselModuleStyleCannotBeEmpty": "Carousel Module style can not be empty"
   }
 }
