--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -1120,6 +1120,7 @@
     "EnterText": "請輸入文字內容",
     "Text": "內容",
     "SelectModule": "選擇模組",
-    "PartnershipModule": "合作廠商模組"
+    "PartnershipModule": "合作廠商模組",
+    "CarouselModuleStyleCannotBeEmpty": "「輪播模組樣式不可為空」"
   }
 }
