--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -1128,7 +1128,7 @@
     "Select": "勾選",
     "ShippingStatus": "物流狀態",
     "Block": "選項底色",
-    "Composeanepic": "撰寫"
-
+    "Composeanepic": "撰寫",
+    "OrdersCompleted": "已完成"
   }
 }
