#PK-1280 Tenant Terms and Conditions

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1406,6 +1406,9 @@
     "Select": "Select",
     "Block": "Block",
     "Composeanepic": "Compose an epic",
-    "OrdersCompleted": "Completed"
+    "OrdersCompleted": "Completed",
+    "TermsAndConditions": "Terms and Conditions",
+    "SpecifyTermsAndConditions": "Please specify terms and conditions",
+    "TermsAndConditionsUpdated": "Terms and Conditions Updated!"
   }
 }
