--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -114,7 +114,7 @@
     "StartDate": "Start Date",
     "EndDate": "End Date",
     "LimitQuantity": "Limit Quantity",
-    "ShareProfit": "Share Profit",
+    "ShareProfit": "Profit Share",
     "FreeShipping": "Free Shipping",
     "Returnable": "Returnable",
     "ShippingMethod": "Shipping Method",
