Commit For Pk-1228

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1420,6 +1420,8 @@
     "MinSpent": "Min Spent",
     "MaxSpent": "Max Spent",
     "AddTags": "Add Tags",
-    "AddTag": "Add Tag"
+    "AddTag": "Add Tag",
+    "Limited": "Limited",
+   
   }
 }
