--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -1136,6 +1136,7 @@
     "uploadUpto5Images": "最多上傳5張圖片",
     "FilePicker:OnlyAccepts": "只接受以下檔案",
     "FilePicker:MaxFileSize": "檔案最大上限",
-    "Carousel": "輪播圖"
+    "Carousel": "輪播圖",
+    "Limited": "限制有效天數"
   }
 }
