#PK-1379 Member detail modification

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1438,6 +1438,9 @@
     "AreYouSureToDeleteSelectedMemberTags": "Are you sure you want to delete the selected member tags?",
     "TotalMembers": "Total Members",
     "PleaseAdjustFiltersToApplyTag": "There is no member with current conditions. Please adjust filters and try again.",
-    "MemberTagWithSameNameAlreadyExists": "Member Tag with same name already exists."
+    "MemberTagWithSameNameAlreadyExists": "Member Tag with same name already exists.",
+    "CurrentBalance": "Current Balance",
+    "TotalEarned": "Total Earned",
+    "TotalDeduction": "Total Deduction"
   }
 }
