--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1441,6 +1441,7 @@
     "MemberTagWithSameNameAlreadyExists": "Member Tag with same name already exists.",
     "CurrentBalance": "Current Balance",
     "TotalEarned": "Total Earned",
-    "TotalDeduction": "Total Deduction"
+    "TotalDeduction": "Total Deduction",
+    
   }
 }
