#PK-1349 Item badge modification

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1442,6 +1442,6 @@
     "CurrentBalance": "Current Balance",
     "TotalEarned": "Total Earned",
     "TotalDeduction": "Total Deduction",
-    
+    "AreYouSureToDeleteThisBadge": "This action can not be undone.\nThis badge will be deleted from all the items and set items."
   }
 }
