#PK-1208 Campaigns Shopping Credit Module

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1479,6 +1479,7 @@
     "DiscountType": "Discount Type",
     "DiscountPercentage": "Discount Percentage",
     "ApplyToAllShippingMethods": "Apply To All Shipping Methods",
-    "DeliveryMethods": "Delivery Methods"
+    "DeliveryMethods": "Delivery Methods",
+    "ConfigureShoppingCredit": "Shopping Credit"
   }
 }
