--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -1164,7 +1164,11 @@
     "Search": "搜尋",
     "Results": "搜尋結果",
     "Reset": "重設",
-    "PropertyName": "規格名稱"
+    "PropertyName": "規格名稱",
+    "SellableQuantity": "可銷售數量",
+    "SetItem": "組合商品",
+    "Quantity": "庫存數量",
+    "SetItemPrice": "組合商品價格"
 
   }
 }
