--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1480,6 +1480,7 @@
     "DiscountPercentage": "Discount Percentage",
     "ApplyToAllShippingMethods": "Apply To All Shipping Methods",
     "DeliveryMethods": "Delivery Methods",
-    "ConfigureShoppingCredit": "Shopping Credit"
+    "ConfigureShoppingCredit": "Shopping Credit",
+    "InventoryReport": "Inventory Report"
   }
 }
