--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -230,6 +230,7 @@
     "Pikachu:GroupBuyShortCodeCannotBeNull": "Group Buy Short Code Can not be null",
     "SetItem": "Set Item",
     "AddItem": "Add Item",
+    "AddBadge": "Add Badge",
     "ChooseItem": "Choose Item",
     "ItemList": "Item List",
     "SetItemPrice": "Set Item Price",
