--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -24,6 +24,7 @@
     "ActivityDate": "活動日期",
     "ActivityTimePeriod": "活動期間",
     "AddItem": "新增商品",
+    "AddBadge": "新增",
     "AddItemStyleButton": "建立新的屬性名稱",
     "AddModule": "新增模塊",
     "Address": "地址",
@@ -1110,7 +1111,7 @@
     "InstallmentPeriods.12": "12期",
     "InstallmentPeriods.18": "18期",
     "InstallmentPeriods.24": "24期",
-    "EnterANewBadge": "輸入新徽章",
+    "EnterANewBadge": "輸入新標籤",
     "CustomTextModule": "文字內容模組",
     "AreYouSureToDeleteThisMessage": "確定要刪除此訊息嗎？",
     "StoreComments": "商店備註",
