--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1500,6 +1500,7 @@
     "AddOnProductId": "Add-On Product",
     "IsUnlimitedQuantity": "Unlimited Quantity",
     "AddOnDisplayPrice": "Add-On Display Price",
+    "AddOnProductCondition": "Add-On Product Condition",
     "FaceBookPixelID": "FaceBook Pixel ID",
     "GAID": "GA Tag ID"
   }
