#PK-1208 Campaign List page

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1501,6 +1501,7 @@
     "IsUnlimitedQuantity": "Unlimited Quantity",
     "AddOnDisplayPrice": "Add-On Display Price",
     "AddOnProductCondition": "Add-On Product Condition",
+    "EditCampaign": "Edit Campaign",
     "FaceBookPixelID": "FaceBook Pixel ID",
     "GAID": "GA Tag ID"
   }
