--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1502,6 +1502,11 @@
     "AddOnDisplayPrice": "Add-On Display Price",
     "AddOnProductCondition": "Add-On Product Condition",
     "EditCampaign": "Edit Campaign",
+    "Pikachu:CampaignWithSameNameAlreadyExists": "Campaign with same name '{name}' already exists.",
+    "AreYouSureToSetCampaignStatus": "Are you sure you want to set this campaign as {0}?",
+    "AreYouSureToDeleteCampaign": "Are you sure you want to delete campaign {0}?",
+    "YouAreNotAuthorized": "You are not authorized to perform this action.",
+    "UpdateCampaign": "Update Campaign",
     "FaceBookPixelID": "FaceBook Pixel ID",
     "GAID": "GA Tag ID"
   }
