Commit For Pk-1417

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -815,7 +815,7 @@
     "UnifiedCalculation:": "Unified Calculation",
     "StagedCalculation": "Staged Calculation",
     "Spend": "Spend",
-    "ToReceivePoints": "To Receive Points",
+    "ToReceivePoints": "To Use Points",
     "ApplicableItems": "Applicable Items",
 
     "ShippingFees": "Shipping Fees",
