--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -738,7 +738,7 @@
     "UnifiedCalculation:": "統一計算:",
     "StagedCalculation": "階段計算",
     "Spend": "花費",
-    "ToReceivePoints": "可獲得點數",
+    "ToReceivePoints": "可使用點數",
     "ApplicableItems": "適用項目",
 
     "ShippingFees": "運費",
